--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   # if you are using latest flutter please update your flutter_svg package to ^0.18.*
-  flutter_svg: ^0.19.1 # help us to use SVG in our app
+  flutter_svg: ^0.22.0 # help us to use SVG in our app
   provider: ^4.3.1 # for State management
+  http: ^0.13.2
+  shared_preferences: ^2.0.5
+  dio: ^4.0.0
+  package_info: ^2.0.0
+  lottie: ^1.0.1
+
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +54,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
